--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,35 +1,76 @@
 
-/* Imports das fonts */
 
+
+/* imports das fontes */
 @font-face {
-    font-family: TitiliumWeb-Black;
-    src: url(../ASSETS/FONTS/Titillium_Web/TitilliumWeb-Black.ttf);
+    font-family: TitilliumWeb-Black;
+    src: url(../assets/fonts/Titillium_Web/TitilliumWeb-Black.ttf);
 }
-
-@font-face {
-    font-family: Quicksand;
-    src: url(../ASSETS/FONTS/Quicksand/static/Quicksand-Regular.ttf);
-}
-
-@font-face {
-    font-family: Inter;
-    src: url(../ASSETS/FONTS/Inter/static/Inter-Regular.ttf);
-}
-
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-
-  
-body {
-    background-color: bisque;
 }
 
-  /* Mobile First */
+body {
+    background-color: #1B1426;
+    color: #ffffff;
+}
 
-  h1 {
-      font-family: "TitiliumWeb-Black";
-  }
+/* Classes genéricas */
+.layout-grid {
+    border: 1px solid salmon;
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+/* justify content + align items */
+.alinhamento-between-center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Mobile First */
+
+/* HEADER */
+header {
+    height: 60px;
+    background-color: #1B1426;
+}
+
+/* Header Top */
+header .header-top {
+    display: none;
+}
+
+/* Header Bottom */
+
+
+header .header-bottom {
+    height: 100%;
+}
+
+header .header-bottom img.logo {
+    width: 86px;
+}
+
+header .header-bottom nav {
+    position: fixed;
+    top: 60px;
+    width: 80vw;
+    height: calc(100vh - 60px);
+
+    display: flex;
+    flex-direction: column;
+    background-color: grey;
+    border: 1px solid white;
+}
+
+header .header-bottom .menu-usuarios {
+    display: none;
+}
+
+
